@@ -1,76 +1,15 @@
 #!/usr/bin/make -f
 
-#export DH_VERBOSE=1
+PKG = $(firstword $(shell dh_listpackages))
+DOCPKG = $(lastword $(shell dh_listpackages))
+TMP = $(CURDIR)/debian/$(PKG)
+DOCTMP = $(CURDIR)/debian/$(DOCPKG)
 
-include /usr/share/quilt/quilt.make
+%:
+	dh $@
 
-build build-indep: build-stamp
+override_dh_auto_install:
+	$(MAKE) install PREFIX=/usr DESTDIR=$(TMP) \
+	    PERL5DIR=$(TMP)/usr/share/perl5
+	$(MAKE) -C $(CURDIR)/doc install DESTDIR=$(DOCTMP)
 
-build-arch:
-# Nothing to be done here.
-
-build-stamp: $(QUILT_STAMPFN) save-po-stamp
-	dh_testdir
-	touch $@
-
-clean: unpatch
-	dh_testdir
-	$(MAKE) clean
-	$(MAKE) -C doc clean
-	rm -rf save_po
-	dh_clean
-	debconf-updatepo
-
-unpatch: restore-po
-
-save-po: save-po-stamp
-
-save-po-stamp: $(QUILT_STAMPFN)
-	dh_testdir
-	mkdir -p save_po
-	cp po/*.po save_po
-
-restore-po:
-	dh_testdir
-	if [ -d save_po ] ; then \
-	     for file in save_po/*.po; do cp $$file po; done \
-	fi
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_prep
-	$(MAKE) install PREFIX=/usr DESTDIR=`pwd`/debian/backup-manager \
-		PERL5DIR=`pwd`/debian/backup-manager/usr/share/perl5
-	$(MAKE) -C doc install DESTDIR=`pwd`/debian/backup-manager-doc
-
-binary: binary-indep binary-arch
-
-binary-arch:
-# Nothing to be done here.
-
-binary-indep: build-indep install
-	dh_testdir
-	dh_testroot
-	dh_installman man/*.8
-	dh_installdebconf
-	dh_installdocs
-	dh_installchangelogs
-	dh_install
-	dh_lintian
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-checkpo:
-	for i in debian/po/*.po; do \
-		echo -n "Checking: $$i: "; \
-		msgmerge -U $$i debian/po/templates.pot; \
-		msgfmt -o /dev/null -c --statistics $$i; \
-		echo ""; \
-	done
-
-.PHONY: build clean binary-indep binary-arch binary install patch unpatch restore-po
